fixed overflow

--- a/styles/sass/base/_base.scss
+++ b/styles/sass/base/_base.scss
@@ -7,7 +7,7 @@
 
 body {
     background-color: $tertiary;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .backgroundImg {
