--- a/styles/styles.css
+++ b/styles/styles.css
@@ -380,7 +380,7 @@ p {
 
 body {
   background-color: #fff;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .backgroundImg {
